Linux Aura: Use incognito profile to theme incognito browser windows

This CL sets the theme profile of browser windows to the same as the
actual profile.  The theme profile for children windows will continue
using the original (ie. non-incognito) profile.

This fixes an issue where incognito windows using the classic Aura
theme would use NativeThemeAura instead of NativeThemeDarkAura.

BUG=715710
R=sky@chromium.org
CC=estade@chromium.org

Review-Url: https://codereview.chromium.org/2862113002
Cr-Commit-Position: refs/heads/master@{#470478}

Former-commit-id: 488d6999c101d4a2a6b7cb3ad5b0336d7bb54069